# Advent-Of-Code

./: .gitignore  AdventOC.hpp  aoc_template.cpp
y2015cpp/day1/: CMakeLists.txt
y2015cpp/day1/include/: Moves.hpp  ReadMoves.hpp  d1task1.hpp  d1task2.hpp
y2015cpp/day1/src/: ReadMoves.cpp  d1task1.cpp  d1task2.cpp  main.cpp
y2015cpp/day2/: CMakeLists.txt
y2015cpp/day2/include/: Present.hpp
y2015cpp/day2/src/: Present.cpp  main.cpp
y2015cpp/day3/: CMakeLists.txt
y2015cpp/day3/include/: task1.hpp  task2.hpp
y2015cpp/day3/src/: main.cpp  task1.cpp  task2.cpp
y2015cpp/day4/: CMakeLists.txt
y2015cpp/day4/include/: md5.h
y2015cpp/day4/src/: main.cpp  md5.cpp
y2015cpp/day5/: CMakeLists.txt
y2015cpp/day5/src/: main.cpp
y2015cpp/day6/: CMakeLists.txt
y2015cpp/day6/include/: Instruction.hpp  Task.hpp
y2015cpp/day6/src/: Instruction.cpp  Task.cpp  main.cpp
y2015cpp/day7/: CMakeLists.txt
y2015cpp/day7/include/: Circuit.hpp  Instruction.hpp
y2015cpp/day7/src/: Circuit.cpp  Instruction.cpp  main.cpp
y2015cpp/day8/: CMakeLists.txt  input.txt
y2015cpp/day8/src/: main.cpp
y2015cpp/day9/src/: main.cpp
y2024cpp/day1/: CMakeLists.txt
y2024cpp/day1/src/: main.cpp
y2024cpp/day2/: CMakeLists.txt
y2024cpp/day2/src/: main.cpp
y2024cpp/day3/: CMakeLists.txt
y2024cpp/day3/src/: main.cpp
y2024cpp/day4/: CMakeLists.txt
y2024cpp/day4/src/: main.cpp
y2025zig/day1/: build.zig  build.zig.zon
y2025zig/day1/src/: main.zig
y2025zig/day2/: build.zig
y2025zig/day2/src/: main.zig
y2025zig/day3/: build.zig
y2025zig/day3/src/: main.zig
y2025zig/day4/src/: main.zig
y2025zig/day5/: build.zig
y2025zig/day5/src/: main.zig
y2025zig/day6/: build.zig
y2025zig/day6/src/: main.zig
y2025zig/day7/: build.zig
y2025zig/day7/src/: main.zig
y2025zig/day8/: build.zig
y2025zig/day8/src/: main.zig
